--- a/Dice.html
+++ b/Dice.html
@@ -12,6 +12,7 @@
     <header class="mainHeader">
         <a href="index.html" target="_parent">
             <h1>GameHub<img src="images/logo.png" alt="GameHub logo"></h1>
+            <!-- Image Source - Dall-E AI -->
         </a>
         <div class="title">
             <p>Dice Simulator</p>
