--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <header class="mainHeader">
         <a href="index.html" target="_parent">
             <h1>GameHub <img src="images/logo.png" alt="GameHub logo"></h1>
+            <!-- Image Source - Dall-E AI -->
         </a>
     </header>
 
@@ -16,6 +17,7 @@
         <section>
             <a href="Dice.html" target="_parent">
                 <img src="images/game1.png" alt="Dice Simulator">
+                <!-- Image Source - Dall-E AI -->
             </a>
             <div>
                 <h2>Dice Simulator</h2>
@@ -25,6 +27,7 @@
         <section>
             <a href="Sudoku.html" target="_parent">
                 <img src="images/game2.png" alt="Sudoku">
+                <!-- Image Source - Dall-E AI -->
             </a>
             <div>
                 <h2>Sudoku</h2>
@@ -34,6 +37,7 @@
         <section>
             <a href="Pacman.html" target="_parent">
                 <img src="images/game3.png" alt="Pacman">
+                <!-- Image Source - Dall-E AI -->
             </a>
             <div>
                 <h2>PacMan</h2>
